# pmomusic

./: .claude-env  .dockerignore  .gitignore  .pmomusic.yml  .pmomusic.yml.example  BROWSEMETADATA_FIX.md  Cargo.toml  DEPENDENCIES.md  DOCKER.md  Dockerfile  INSTALL_LIBSOXR.md  INSTALL_NOTES.md  Makefile  OPTIMIZATION_PREBUFFER_TO_PLAYLIST.md  PLAYER_PMOSOURCE_README.md  Plan_d_implementation_webui_control_point.md  README.md  Readme.md  SECURITY_CONFIG.md  UPNP_ANALYSIS_REPORT.md  UPNP_FIX_SUMMARY.md  all.txt  analyze_flac.sh  blackboard-template.html  bubble_upmpdcli.pcap  check_audio_quality.sh  com.bubblesoft.android.bubbleupnp_log.txt  detect_clicks.sh  docker-build.sh  docker-compose.yml  fix-mermaid.sh  go.mod  go.sum  headers.txt  media_  metadata.txt  package-lock.json  pmo_src.txt  pmodidl_026.txt  pmoparadise_011.txt  (+9 more)
PMOMusic/: Cargo.toml  Cargo.toml.backup
PMOMusic/.pmomusic/: config.yaml
PMOMusic/src/: main.rs
pmoaudio/: ARCHITECTURE.md  Cargo.toml  Cargo.toml.backup  FEATURES_EXTENDED.md  README.html  README.md
pmoaudio-ext/: Cargo.toml
pmoaudio-ext/src/: lib.rs
pmoaudio/examples/: audio_chunk_api.rs  check_flac_bits.rs  convert_to_flac24.rs  file_nodes_test.rs  multiroom_demo.rs  multiroom_volume_demo.rs  play_audio.rs  play_with_resampling.rs  quick_start.rs  streaming_demo.rs  volume_control_demo.rs
pmoaudio/src/: audio_chunk.rs  audio_segment.rs  bit_depth.rs  conversions.rs  events.rs  lib.rs  macros.rs  pipeline.rs  sample_types.rs  sync_marker.rs  type_constraints.rs
pmoaudio/tests/: integration_test.rs
pmoaudiocache/: Cargo.toml  Cargo.toml.backup
pmoaudiocache/examples/: test_flac_debug.rs  test_progressive_streaming.rs  test_streaming_flac.rs
pmoaudiocache/src/: api.rs  cache.rs  config_ext.rs  db.rs  flac.rs  lib.rs  metadata.rs  metadata_ext.rs  openapi.rs  pmoserver_ext.rs  pmoserver_impl.rs  streaming.rs  track_metadata.rs
pmoaudiocache/tests/: test_cache.rs
pmocache/: ARCHITECTURE.md  Cargo.toml  Cargo.toml.backup  DOWNLOAD_MODULE.md
pmocache/examples/: README_EXAMPLES.md  simple_transformer.rs  test_download.rs  test_download_transformer.rs
pmocache/src/: api.rs  cache.rs  cache_trait.rs  config_ext.rs  db.rs  download.rs  lazy.rs  lib.rs  metadata_macros.rs  openapi.rs  pmoserver_ext.rs
pmocache/tests/: test_cache.rs  test_db.rs  test_pinnable.rs
pmoconfig/: Cargo.toml  Cargo.toml.backup  PASSWORD_ENCRYPTION.md  README.md  config.go  pmomusic.yaml
pmoconfig/examples/: encrypt_password.rs
pmoconfig/src/: api.rs  encryption.rs  lib.rs  openapi.rs  pmomusic.yaml
pmocontrol/: Cargo.toml  rust-cast-async-analysis.md  ssdp_capture.txt
pmocontrol/examples/: arylic_tcp_demo.rs  chromecast_info.rs  chromecast_playback_test.rs  discover.rs  dump_ssdp.rs  event_demo.rs  full_control_point_demo.rs  linkplay_demo.rs  live_pmomusic_demo.rs  media_server_events_demo.rs  openhome_tester.rs  pmo_remote_control.rs  pmomusic_integration_example.rs  queue_pmomusic_demo.rs  renderer_demo.rs  test_attach_playlist.rs  test_avtransport.rs
pmocontrol/src/: arylic_tcp.rs  avtransport_client.rs  capabilities.rs  chromecast_discovery.rs  chromecast_renderer.rs  connection_manager_client.rs  control_point.rs  control_point_corrections.md  discovery.rs  errors.rs  events.rs  identity.rs  lib.rs  linkplay.rs  linkplay_renderer.rs  media_server.rs  media_server_events.rs  model.rs  music_renderer.rs  online.rs  openapi.rs  openhome.rs  openhome_client.rs  openhome_playlist.rs  openhome_renderer.rs  playback_queue.rs  pmoserver_ext.rs  provider.rs  queue_backend.rs  queue_interne.rs  registry.rs  renderer.rs  rendering_control_client.rs  soap_client.rs  sse.rs  upnp_renderer.rs
pmocovers/: Cargo.toml
pmocovers/src/: api.rs  cache.rs  config_ext.rs  db.rs  lib.rs  openapi.rs  pmoserver_impl.rs  webp.rs
pmocovers/tests/: test_cache.rs  test_webp.rs
pmodidl/: Cargo.toml  didilite.go  markdown.go  model.go  parser.go
pmodidl/examples/: test_serialization.rs
pmodidl/src/: lib.rs
pmoflac/: Cargo.toml  Cargo.toml.backup
pmoflac/src/: aac.rs  aiff.rs  autodetect.rs  common.rs  decoder.rs  decoder_common.rs  encoder.rs  error.rs  lib.rs  metadata.rs  mp3.rs  ogg.rs  ogg_common.rs  ogg_flac_encoder.rs  opus.rs  pcm.rs  prefixed_reader.rs  stream.rs  transcode.rs  util.rs  wav.rs
pmoflac/tests/: aac_decode.rs  aiff_decode.rs  auto_decode.rs  flac_streams.rs  mp3_decode.rs  ogg_decode.rs  opus_decode.rs
pmomediarenderer/: Cargo.toml  Cargo.toml.backup  README.md
pmomediarenderer/src/: adapter.rs  device.rs  error.rs  handlers.rs  lib.rs  messages.rs  pipeline.rs  registry.rs  renderer.rs  state.rs
pmomediaserver/: Cargo.toml  Cargo.toml.backup  README.md
pmomediaserver/src/: content_handler.rs  device.rs  device_ext.rs  lib.rs  paradise_streaming.rs  server_ext.rs  source_registry.rs  sources.rs  sources_api.rs
pmoparadise/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Cargo.toml.backup  FINAL_SUMMARY.md  IMPLEMENTATION.md  LICENSE-APACHE  LICENSE-MIT  MEDIASERVER_TODO.md  RADIO_PARADISE_STREAM_SOURCE.md  README.md  STREAMING_IMPLEMENTATION_GUIDE.md  STREAMING_PHASE1_SUMMARY.md  SUMMARY.md
pmoparadise/.pmomusic/: config.yaml
pmoparadise/examples/: download_block.rs  extract_track.rs  now_playing.rs  play_and_cache.rs  radio_paradise_stream.rs  serve_channels.rs  show_source_image.rs  single_channel_server.rs  stream_block.rs  test_streaming.rs  (+2 more)
pmoplaylist/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Cargo.toml.backup  README.md
pmoqobuz/: API_ANALYSIS.md  CACHE_STRATEGY.md  Cargo.toml  Cargo.toml.backup  DISK_CACHE_USAGE.md  IMPLEMENTATION_STATUS.md  README.md
pmoradiofrance/: Cargo.toml
pmoserver/: Cargo.toml
pmosource/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Cargo.toml.backup  README.md
pmoupnp/: Cargo.toml  Cargo.toml.backup  README_INTROSPECTION.md  debug_index.go  dev_set.go  device.go  deviceinstance.go  errors.rs  events.go  interface.go  server.go  service.go  serviceinstance.go  serviceinstanceset.go  serviceset.go  srv_reg_devices.go
pmourlsource/: Cargo.toml
pmowebrenderer/: Cargo.toml
(+1004 files in other folders)
