[package]
name = "PMOMusic"
version = "0.1.0"
edition = "2024"

[dependencies]
pmoconfig = { path = "../pmoconfig" }
pmoupnp =  { path = "../pmoupnp"}
pmoserver = { path = "../pmoserver" }
pmocovers = { path = "../pmocovers", features = ["pmoserver"] }
pmoapp = { path = "../pmoapp", features = ["pmoserver"] }


tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time","signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
axum = "0.8.4"
serde_json = "1.0.145"
