[package]
name = "pmoaudio"
version = "0.1.0"
edition = "2021"

[features]
default = []
simd = []

[dependencies]
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = { workspace = true }
futures-util = "0.3"
pmoflac = { path = "../pmoflac" }
pmometadata = { path = "../pmometadata" }
paste = "1"
soxr = "0.6.0"
bytemuck = "1.24.0"
reqwest = { version = "0.12", features = ["stream"] }
tracing = { workspace = true }
cpal = "0.15"
once_cell = "1.20"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"
tracing-subscriber = { workspace = true }
