[package]
name = "pmocache"
version = "0.1.0"
edition = "2021"

[dependencies]
# Base de données
rusqlite = { version = "0.37.0", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.12", features = ["blocking", "stream"] }
futures-util = "0.3"

# Cryptographie
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# Utilitaires
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = "1.6"
paste = "1.0"
pmoflac = { path = "../pmoflac" }

# Async
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }

# Logging
tracing = { workspace = true }

# Feature pour OpenAPI
utoipa = { version = "5.3", optional = true }

# Feature pour pmoserver (extension HTTP)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

# Feature pour pmoconfig (extension de configuration)
pmoconfig = { path = "../pmoconfig", optional = true }
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
openapi = ["dep:utoipa"]
pmoserver = ["dep:axum", "dep:tower", "dep:tower-http"]
pmoconfig = ["dep:pmoconfig", "dep:serde_yaml"]
