
[package]
name = "pmoconfig"
version = "0.1.0"
edition = "2021"

[dependencies]
pmoutils ={ path = "../pmoutils" }

serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
lazy_static = "1.4.0"
dirs = "6.0.0"
log = "0.4.20"
anyhow = "1.0.75"
uuid = { workspace = true }
tracing = { workspace = true }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"

# Async
tokio = { workspace = true, optional = true }

# Serveur HTTP (pour l'API REST)
axum = { version = "0.8", optional = true }
utoipa = { version = "5.3", features = ["axum_extras"], optional = true }

[features]
default = []
api = ["dep:tokio", "dep:axum", "dep:utoipa"]