[package]
name = "pmocovers"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cache générique
pmocache = { path = "../pmocache" }

# Gestion d'images
image = "0.25"
webp = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["blocking"] }

# Utilitaires
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Async
tokio = { version = "1.0", features = ["full"] }

# Singleton
once_cell = "1.20"

# Serveur HTTP (optionnel pour l'extension)
pmoserver = { path = "../pmoserver", optional = true }
pmoconfig = { path = "../pmoconfig", optional = true }
axum = { version = "0.8", optional = true }
utoipa = { version = "5.3", features = ["axum_extras"], optional = true }

tracing = "0.1.41"

[features]
default = ["pmoserver"]
pmoconfig = ["dep:pmoconfig", "pmocache/pmoconfig"]
pmoserver = ["pmoconfig", "dep:pmoserver", "dep:axum", "dep:utoipa", "pmocache/openapi", "pmocache/pmoserver"]
