[package]
name = "pmoflac"
version = "0.1.0"
edition = "2021"
authors = ["PMOMusic"]
description = "Asynchronous FLAC <-> PCM streaming utilities"
license = "MIT"

[lib]
name = "pmoflac"
path = "src/lib.rs"

[dependencies]
bytes = "1.6"
claxon = "0.4"
lewton = "0.10"
libc = "0.2"
libflac-sys = { version = "0.3.3", default-features = false, features = ["build-flac"] }
lofty = "0.22"
minimp3 = "0.5"
opus = "0.3"
pmometadata = { path = "../pmometadata" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "fs"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "time", "fs"] }
